Added mirror example

--- a/src/main/resources/assets/veil-example-mod/lang/en_us.json
+++ b/src/main/resources/assets/veil-example-mod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "veil-example-mod.items": "Veil Example",
-  "block.veil-example-mod.map": "Tesselation Map Example"
+  "block.veil-example-mod.map": "Tesselation Map Example",
+  "block.veil-example-mod.mirror": "Mirror Example"
 }
